# sec-edgar-toolkit

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: conda-release.yml  javascript-ci.yml  python-ci.yml  python-lint-check.yml  python-release.yml  typescript-ci.yml  typescript-release.yml
python/: .env.example  Makefile  README.md  pyproject.toml  pytest.ini
python/examples/: api_showcase.py  basic_usage.py  current_events_tracker.py  edgartools_compatibility.py  item_extraction_demo.py  xbrl_financial_analysis.py  xml_parsing_example.py
python/src/sec_edgar_toolkit/: __init__.py  edgar.py
python/src/sec_edgar_toolkit/client/: __init__.py  sec_edgar_api.py
python/src/sec_edgar_toolkit/core/: __init__.py  company.py  filing.py  global_functions.py  xbrl.py
python/src/sec_edgar_toolkit/endpoints/: __init__.py  company.py  filings.py  xbrl.py
python/src/sec_edgar_toolkit/exceptions/: __init__.py  base.py  http.py
python/src/sec_edgar_toolkit/parsers/: __init__.py  current_events.py  financial_forms.py  item_extractor.py  ownership_forms.py
python/src/sec_edgar_toolkit/types/: __init__.py  analytics.py  company.py  current_events.py  filing.py  financial_forms.py  institutional_holdings.py  parsing.py  proxy_statements.py
python/src/sec_edgar_toolkit/utils/: __init__.py  filters.py  http.py  xml_parser.py
python/tests/: __init__.py  conftest.py  test_core_functionality.py  test_financial_forms.py  test_ownership_forms.py  test_sec_edgar_api.py  test_sec_edgar_api_integration.py
python/tests/fixtures/: __init__.py  company_fixtures.py  filing_fixtures.py  form4_sample.xml  form5_sample.xml
python/tests/fixtures/forms/10-K/: pfizer_10k_2024.txt
python/tests/fixtures/forms/10-Q/: meta_10q_2024.txt
python/tests/fixtures/forms/13F/: bridgewater_13f_2024.txt
python/tests/fixtures/forms/4/: berkshire_form4_2024.txt  microsoft_form4_2024.txt
python/tests/fixtures/forms/5/: berkshire_form5_2024.txt
python/tests/fixtures/forms/8-K/: nvidia_8k_2024.txt
python/tests/fixtures/forms/DEF14A/: apple_def14a_2024.txt
typescript/: .eslintrc.js  README.md  jest.config.js  package.json  tsconfig.json
typescript/examples/: api-showcase.ts  caching-demo.ts  comprehensive-error-handling.ts  item-extraction-demo.ts  xbrl-financial-analysis.ts
typescript/src/: edgar.ts  index.ts
typescript/src/__tests__/: cache.test.ts  current-events.test.ts  edgar-client.test.ts  error-handling.test.ts  financial-forms.test.ts  ownership-forms.test.ts  parsers.test.ts  xbrl.test.ts
typescript/src/client/: edgar-client.ts  index.ts  sync-wrapper.ts
typescript/src/core/: xbrl.ts
typescript/src/endpoints/: company.ts  filings.ts  index.ts  xbrl.ts
typescript/src/exceptions/: base.ts  errors.ts  index.ts
typescript/src/parsers/: current-events.ts  financial-forms.ts  index.ts  item-extractor.ts  ownership-forms.ts
typescript/src/types/: analytics.ts  company.ts  config.ts  current-events.ts  filing.ts  financial-forms.ts  index.ts  institutional-holdings.ts  ownership-forms.ts  parsing.ts  proxy-statements.ts  xbrl.ts
typescript/src/utils/: cache.ts  http-client.ts  index.ts
typescript/tests/fixtures/forms/10-K/: alphabet_10k_2024.txt  jpmorgan_10k_2024.txt
typescript/tests/fixtures/forms/10-Q/: amazon_10q_2023.txt  amazon_10q_2024.txt
typescript/tests/fixtures/forms/13F/: berkshire_13f_2024.txt  fidelity_13f_2024.txt  vanguard_13f_2024.txt
typescript/tests/fixtures/forms/4/: tesla_form4_2024.txt
typescript/tests/fixtures/forms/6/: foreign_issuer_form6_2024.txt  form6_2024.txt
typescript/tests/fixtures/forms/DEF14A/: alphabet_def14a_2024.txt  meta_def14a_2024.txt  microsoft_def14a_2024.txt  nvidia_def14a_2024.txt
